# sds-be

./: .env.example  .gitignore  README.md  cookies.txt  db.sqlite3  docker-compose.yaml  main.py  pyproject.toml
chat/: api.py  models.py  rag.py
chat/migrations/: 0001_initial.py
config/: settings.py  urls.py
docs/: test_l18vhnR.txt
documents/: api.py  models.py  serializers.py  tasks.py
documents/migrations/: 0001_initial.py
rag_engine/: embeddings.py  mongodb_client.py  prompting.py  rag.py  retrieval.py  search.py  weaviate_client.py  weviate_client.py
tests/: create_docs.py  test_celery.py
tests/test_documents/: django_authentication.txt  jwt_authentication.txt  performance_optimization.txt  rest_framework_api.txt  security_best_practices.txt
